fixed: tag z-index in coupon

--- a/sass/components/_coupon.scss
+++ b/sass/components/_coupon.scss
@@ -421,6 +421,7 @@ h1+.coupon {
 	}
 	.tag {
 		position: absolute;
+		z-index: 1;
 		right: -2px;
 		bottom: -2px;
 
